# wmg-test-prisma

./: README.md  package.json
prisma/: schema.prisma
server/: BUILD.bazel  MyServer.ts
